<resources>
    <string name="app_name">Inventory</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="item_name">Item Name*</string>
    <string name="quantity_req">Quantity in stock*</string>
    <string name="item_price_req">Item Price*</string>
    <string name="save_action">Save</string>
    <string name="item_price">Item Price</string>
    <string name="price">Price</string>
    <string name="quantity_in_stock">Quantity in stock</string>
    <string name="item">Item</string>
    <string name="add_new_item">Add Item</string>
    <string name="quantity_detail">Quantity in Stock: %s</string>
    <string name="delete">Delete</string>
    <string name="sell">Sell</string>
    <string name="dialog_delete_title">Are you sure to delete??</string>
    <string name="attention">Attention!!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="edit_item">"Edit "</string>
    <string name="price_detail">Price:  %s</string>
    <string name="name_detail">Item: %s</string>
</resources>